[package]
name = "kgapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bevy = "0.14.1"
bevy_ecs_tilemap = "0.14.0"
flume = "0.11.0"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
